tests/static/phase6_kyverno/cluster-wide-sealing-fixture.yaml
---
apiVersion: bitnami.com/v1alpha1
kind: SealedSecret
metadata:
  name: cluster-wide-fixture
  namespace: demo-dev
  annotations:
    sealedsecrets.bitnami.com/cluster-wide: "true"
spec:
  encryptedData:
    fixture: AgClusterWideCiphertextFixtureOnly
