tests/static/phase6_kyverno/namespace-wide-sealing-fixture.yaml
---
apiVersion: bitnami.com/v1alpha1
kind: SealedSecret
metadata:
  name: namespace-wide-fixture
  namespace: demo-dev
  annotations:
    sealedsecrets.bitnami.com/namespace-wide: "true"
spec:
  encryptedData:
    fixture: AgNamespaceWideCiphertextFixtureOnly
